# HTTPServer

./: CMakeLists.txt  README.md  index.html
src/: ClientHandler.c  ClientHandler.h  Common.c  Common.h  ConnectionHandler.c  ConnectionHandler.h  ContentHandler.c  ContentHandler.h  CoreServer.c  CoreServer.h  FileHandler.h  HeaderHandler.h  PathHandler.h  main.c
tst/: test_connect.py
tst/client_connect/: client.py
