cmake_minimum_required(VERSION 2.8)
project(HTTPServer)
set(C_EXTRA_FLAGS "-O0 -g -ggdb -std=c99 -D_GNU_SOURCE ")
set(LINKER_EXTRA_FLAGS  "-pthread")
SET( CMAKE_C_FLAGS  "${CMAKE_C_FLAGS} ${C_EXTRA_FLAGS}" )
SET( CMAKE_EXE_LINKER_FLAGS  "${CMAKE_EXE_LINKER_FLAGS} ${LINKER_EXTRA_FLAGS}")
include_directories(src)
file(GLOB_RECURSE SOURCES "src/*.c")
add_executable(HTTPServer ${SOURCES})
